# toy-olap-db

./: Cargo.toml  README.md
src/: binder.rs  catalog.rs  database.rs  executor.rs  lib.rs  main.rs  parser.rs  test.rs  types.rs
src/binder/statement/: create.rs  mod.rs  select.rs
src/catalog/: column.rs  database.rs  schema.rs  table.rs
