[package]
name = "toy-olap-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rustyline = "14.0.0"
sqllogictest = "0.20.4"
sqlparser = "0.45.0"
thiserror = "1.0.61"
uuid = {version= "1.8.0", features = ["v4"]}
